fix scrollbar styles

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -2,6 +2,27 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    /* ScrollBar */
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: rgb(53, 50, 50);
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #4cb1f6;
+        border-radius: 10px;
+    }
+
+    @-moz-document url-prefix() {
+        {
+            scrollbar-color: #4cb1f6 rgb(53, 50, 50);
+        }
+    }
 }
 
 html {
@@ -11,28 +32,6 @@ html {
 body {
     background-color: $dark;
     height: 100vh;
-}
-
-/* ScrollBar */
-body {
-    --sb-track-color: rgb(53, 50, 50);
-    --sb-thumb-color: #4cb1f6;
-    --sb-size: 10px;
-    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
-}
-
-body::-webkit-scrollbar, .scrollBar::-webkit-scrollbar {
-    width: var(--sb-size) 
-}
-
-body::-webkit-scrollbar-track, .scrollBar::-webkit-scrollbar-track {
-    background: var(--sb-track-color);
-    border-radius: 10px;
-}
-
-body::-webkit-scrollbar-thumb, .scrollBar::-webkit-scrollbar-thumb {
-    background: var(--sb-thumb-color);
-    border-radius: 10px;
 }
 
 /* Navbar */
